<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sporting Events</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="titre">Sporting events</string>
    <string name="desc_login_title">Deco login title</string>
    <string name="login_title">Login</string>
    <string name="pass_title">password</string>
    <string name="title_btn_connexion">Connexion</string>
    <string name="img_desc">icon user</string>
    <string name="title_activity_accueil">Acceuil</string>
    <string name="title_evenement">Evenement</string>
    <string name="btn_creer">Créer</string>
    <string name="btn_consulter">Consulter</string>
    <string name="btn_modifier">Modifier</string>
    <string name="logo">Logo</string>
	<string name="action_option">Option</string>
</resources>
