<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/accueil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
     android:gravity="center"
    android:orientation="vertical" >
    
        <ImageView
        android:id="@+id/deco_evenement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/title_evenement"
        android:src="@drawable/deco_events_title" />

     <ImageView
         android:layout_width="120dp"
         android:layout_height="116dp"
         android:layout_marginBottom="10dp"
         android:contentDescription="@string/logo"
         android:src="@drawable/logo" />
        
     <Button
        android:id="@+id/creer"
        android:layout_width="250dip"
        android:layout_height="50dip"
        android:background="@drawable/btn_creer"
        android:textStyle="bold"
        android:text="@string/btn_creer" />
     
     <Button
        android:id="@+id/consulter"
        android:layout_width="250dip"
        android:layout_height="50dip"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_consulter"
        android:textStyle="bold"
        android:text="@string/btn_consulter" />
     
    <Button
        android:id="@+id/modifier"
        android:layout_width="250dip"
        android:layout_height="50dip"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_modifier"
        android:textStyle="bold"
        android:text="@string/btn_modifier" />

</LinearLayout>
